# HWW07

07/: alembic.ini  connect_db.py  make_ask.py  models.py  myhomework.db  pyproject.toml  seeds.py
07/alembic4/versions/: 37d6b57523bc_neww.py  3e13b9b0c8e6_neww.py  6dd6cc43c064_init.py  c08c5d992a10_new222.py  c8881abe1bf8_new.py  ff651795fd45_new.py
